objects/parent2__c.object
<CustomObject>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Establishment__c</fullName>
        <label>Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Natonality__c</fullName>
        <label>Natonality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phonenumber__c</fullName>
        <label>phonenumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>servicetype__c</fullName>
        <label>servicetype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>global</fullName>
                </value>
                <value>
                    <fullName>local</fullName>
                </value>
                <value>
                    <fullName>nation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>parent2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>parent2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parent2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>